syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "members.proto";
import "supporters.proto";

option go_package = "go-f2lb/pb";

service ControlMsgService {
  rpc Control(stream google.protobuf.Empty) returns (stream ControlMsg) {}
  rpc Refresh(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc Auth(StakeAddr) returns (User) {}
  rpc Authn(AuthnSignature) returns (google.protobuf.BoolValue) {}
  rpc BuildDelegationTx(Delegation) returns (PartiallySignedTx) {}
  rpc CanceledTx(TxId) returns (google.protobuf.Empty) {}
  rpc SubmittedTx(TxId) returns (google.protobuf.Empty) {}
}

message ControlMsg {
  string date = 1;
  string epoch = 2;
  string slot = 3;

  enum Type {
    NONE = 0;
    REFRESH = 1;
  }
  Type type = 4;
  string data = 5;
}

// Auth
message User {
    enum Type {
    VISITOR = 0;
    SPO = 1;
    SUPPORTER = 2;
  }
  Type type = 1;
  string stakeKey = 2;
  string stakeAddress = 3;
  Member member = 4;
  Supporter supporter = 5;
  bool isAdmin = 6;
  string delegatedPool = 7;
  bool isVerified = 8;
}

message StakeAddr {
  string stakeAddress = 1;
}

// Tx
message Delegation {
  string stakeAddress = 1;
  string poolId = 2;
  string utxoIdHint = 3;
}

message PartiallySignedTx {
  string cborHex = 1;
}

message TxId {
  string hash = 1;
}

// Authentication Signature (COSE Signature)
message AuthnSignature {
  string stakeAddress = 1;
  string signature = 2;
  string key = 3;
}
